<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, JigdrawPuzzleMain!</string>
    <string name="app_name">JigdrawPuzzle</string>
    <string name="str_time_consume"> %1$2s s</string>
    
        
    <string name="str_pause">pause</string>
    <string name="str_share">share</string>
    <string name="str_level">level: %1$2s</string>
    
    <string name="str_level_low">low</string>
    <string name="str_level_medium">medium</string>
    <string name="str_level_high">high</string>

    <string name="str_game_exit_check">Do you want exit game?</string>
    <string name="str_game_exit_dialogue_title">exit</string>
    
    <string name="str_btn_yes">Yes</string>
    <string name="str_btn_no">No</string>
    
    <!-- menu string start -->
    <string name="str_menu_main_choose">Choose Image</string>
    <string name="str_menu_main_check_img">Origin Image</string>
    <string name="str_menu_main_setting">Setting</string>
    <string name="str_menu_main_setting_levelset">Level Setting</string>
    <string name="str_menu_save">Archive</string>
    <string name="str_menu_main_setting_audioset">Audio Setting</string>
    <string name="str_menu_ad">Donate</string>
    <!-- menu string end -->
    <string name="str_origin_image_show">Origin Image</string>
    
    <!-- setting preferences string. -->
    <string name="str_preferences_setting_level">Level Setting</string>
    <string name="str_preferences_setting_audio">Music Setting</string>
    
    <!-- error toast string -->
    <string name="str_image_error">Can\'t get this image, please choose another one.</string> 
</resources>
